[package]
name = "rustleak-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
log = "0.4.22"
simple_logger = "5.0.0"
hickory-resolver = "0.24.1"
rustleak-lib = { path = "../rustleak-lib" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.4.0"
rand = "0.8.5"
futures = "0.3.25"
[build]
target = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "aarch64-apple-darwin", "x86_64-apple-darwin"]

[package.metadata]
# Configure custom release profiles
release = { lto = true, opt-level = "z" }
