[package]
name = "rustleak-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
hickory-resolver = "0.24.1"
regex = "1.11.1"
rand = "0.8.5"
base32 = "0.5.1"

[build]
target = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "aarch64-apple-darwin", "x86_64-apple-darwin"]

[package.metadata]
# Configure custom release profiles
release = { lto = true, opt-level = "z" }
