[package]
name = "rustleak-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "net"] }
async-trait = "0.1.83"
clap = { version = "4.5.23", features = ["derive", "env"] }
hickory-server = "0.24.1"
hickory-proto = "0.24.1"
hickory-resolver = "0.24.1"
thiserror = "2.0.4"
anyhow = "1.0.94"
rustleak-lib = { path = "../rustleak-lib" }
base32 = "0.5.1"
log = "0.4.22"
simple_logger = "5.0.0"

[build]
target = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "aarch64-apple-darwin", "x86_64-apple-darwin"]

[package.metadata]
# Configure custom release profiles
release = { lto = true, opt-level = "z" }
